--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,12 @@
+### ⬆ IMPORTANT PART ⬆ ###
+
 # Your workflow name.
 name: Deploy to heroku.
 
 # Run workflow on every push to master branch.
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 # Your workflows jobs.
 jobs:
@@ -53,7 +55,3 @@ jobs:
           # By default, this argument is set to "web".
           # For more information look at https://devcenter.heroku.com/articles/process-model
           process_type: web
-
-
-
-### ⬆ IMPORTANT PART ⬆ ###
